css/main.css
/* ... */
.file-saver > :first-child {
    position: fixed !important;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* center horizontally */
    width: 100%;
    max-width: 500px;
    background-color: var(--input-background-fill);
    border: var(--input-border-width) solid var(--input-border-color) !important;
    padding: 10px;
}

.file-saver > :first-child > :last-child {
    background: var(--block-background-fill);
    justify-content: flex-end;
}

.checkboxgroup-table label {
    background: none !important;
    padding: 0 !important;
    border: 0 !important;
}

.checkboxgroup-table div {
    display: grid !important;
}

.markdown ul ol {
    font-size: 100% !important;
}

.pretty_scrollbar::-webkit-scrollbar,
#image-history-gallery > :nth-child(2)::-webkit-scrollbar {
    width: 7px;
    height: 7px;
}

.pretty_scrollbar::-webkit-scrollbar-track,
#image-history-gallery > :nth-child(2)::-webkit-scrollbar-track {
    background: transparent;
}

.pretty_scrollbar::-webkit-scrollbar-thumb,
.pretty_scrollbar::-webkit-scrollbar-thumb:hover,
#image-history-gallery > :nth-child(2)::-webkit-scrollbar-thumb,
#image-history-gallery > :nth-child(2)::-webkit-scrollbar-thumb:hover {
    background: var(--neutral-300);
    border-radius: 9999px;
}

.dark .pretty_scrollbar::-webkit-scrollbar-thumb,
.dark .pretty_scrollbar::-webkit-scrollbar-thumb:hover,
.dark #image-history-gallery > :nth-child(2)::-webkit-scrollbar-thumb,
.dark #image-history-gallery > :nth-child(2)::-webkit-scrollbar-thumb:hover {
    background: rgb(255 255 255 / 6.25%);
    border-radius: 9999px;
}

.pretty_scrollbar::-webkit-resizer,
#image-history-gallery > :nth-child(2)::-webkit-resizer {
    background: transparent;
}

.dark .pretty_scrollbar::-webkit-resizer,
.dark #image-history-gallery > :nth-child(2)::-webkit-resizer {
    background: transparent;
}

.pretty_scrollbar::-webkit-scrollbar-corner,
#image-history-gallery > :nth-child(2)::-webkit-scrollbar-corner {
    background: transparent;
}

audio {
    max-width: 100%;
}

/* Copied from https://github.com/AUTOMATIC1111/stable-diffusion-webui */
#default-token-counter, #notebook-token-counter {
    position: absolute !important;
    z-index: 100;
    background: var(--input-background-fill) !important;
    min-height: 0 !important;
    width: 0;
    text-align: left;
    direction: rtl;
    right: 13px;
}

#default-token-counter {
    top: calc(100dvh - 200px) !important;
}

#notebook-token-counter {
    top: calc(100dvh - 172px) !important;
}

#default-token-counter span, #notebook-token-counter span {
    padding: 1px;
    box-shadow: 0 0 0 0.3em rgb(192 192 192 / 15%), inset 0 0 0.6em rgb(192 192 192 / 7.5%);
    border: 2px solid rgb(192 192 192 / 40%) !important;
    border-radius: 0.4em;
}

.no-background {
    background: transparent;
    padding: 0 !important;
}

/* ----------------------------------------------
  Chat tab
---------------------------------------------- */
.h-\[40dvh\] {
    height: 66.67dvh
}

.gradio-container {
    margin-left: auto !important;
    margin-right: auto !important;
}

.w-screen {
    width: unset
}

.pending.svelte-1ed2p3z {
    opacity: 1;
}

#chat-tab {
    padding: 0;
}

#chat-tab > :nth-child(1) {
    display: flex;
    flex-direction: row;
    gap: 0;
}

#chat-tab button, #notebook-tab button, #default-tab button {
    min-width: 0 !important;
}

#chat-tab > :first-child, #extensions {
    margin-left: auto;
    margin-right: auto;
}

@media screen and (width <= 688px) {
    #chat-tab {
        padding-left: 0;
        padding-right: 0;
    }

    .chat {
        padding-left: 0;
        padding-right: 0;
    }
}

.chat {
    margin-left: auto;
    margin-right: auto;
    flex: 1;
    overflow-y: hidden;
    display: flex;
    flex-direction: column;
    word-break: break-word;
    overflow-wrap: anywhere;
    border-top: none;
    border-radius: 0;
    visibility: visible;
}

.chat-parent {
    flex: 1;
    overflow: auto !important;
    border-radius: 0 !important;
    margin-bottom: 75px;
}

.chat-parent .prose {
    visibility: visible;
}

.chat .message {
    margin-left: auto;
    margin-right: auto;
    text-align: start;
    padding-left: 1rem;
    padding-right: 1rem;
    contain: layout;
}

.chat .message .timestamp {
    font-size: 0.7em;
    display: inline-block;
    font-weight: normal;
    opacity: 0.7;
    margin-left: 5px;
}

.chat > .messages {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 102px);
}

.chat > .messages > :first-child {
    padding-top: 20px;
}

.message-body {
    font-size: 16px;
}

.dark .message-body h1,
.dark .message-body h2,
.dark .message-body h3,
.dark .message-body h4,
.dark .message-body h5,
.dark .message-body h6 {
    color: #e8e8e8 !important;
}

.message-body blockquote {
    border-left-width: 4px;
    border-left-color: var(--border-color-primary);
}

.message-body h1,
.message-body h2,
.message-body h3,
.message-body h4,
.message-body h5,
.message-body h6 {
    color: #1a1a1a;
}

.message-body h1 {
    font-weight: 700;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
}

.message-body h2 {
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
}

.message-body h3 {
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
}

.message-body h4 {
    font-weight: 600;
    font-size: 1em;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
}

.message-body h5 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.message-body h6 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.dark .message q {
    color: #f5b031;
}

.message q {
    color: #3480be;
}

.message-body q::before, .message-body q::after {
    content: "";
}
/* ... */

